2010-05-24  Richard Guenther  <rguenther@suse.de>

	PR lto/44196
	* tree.c (find_decls_types_r): Walk BLOCKs and its vars.

2010-05-24  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2010-05-20  Uros Bizjak  <ubizjak@gmail.com>

	PR target/43733
	* configure.ac (gcc_cv_as_ix86_sahf): Switch to 64bit mode.
	* configure: Regenerate.
	* config.in: Regenerate.
	* config/i386/i386.md (x86_sahf_1): Conditionally output 0x9e
	instead of sahf only for 64bit targets.

2010-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-24  H.J. Lu  <hongjiu.lu@intel.com>

	* config/i386/ia32intrin.h (__crc32q): Define only if
	__SSE4_2__ is defined.

2010-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline
	2010-05-23  H.J. Lu  <hongjiu.lu@intel.com>

	PR target/44245
	* config/i386/i386.c (def_builtin): Properly check
	OPTION_MASK_ISA_64BIT.

2010-05-23  Maarten Lankhorst  <mlankhorst@codeweavers.com>

	Merged from trunk
	PR target/43869
	* config/i386/i386.c: Make sure that the correct regparm is passed.

2010-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44223
	* haifa-sched.c (schedule_insn): When freeing INSN_REG_USE_LIST,
	unchain each use from the cyclic next_regno_use chain first.

2010-05-21  Andreas Krebbel  <Andreas.Krebbel@de.ibm.com>

	* config/s390/s390.c (override_options): Increase the default
	of max-completely-peel-times.

2010-05-21  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/44038
	* tree-ssa-forwprop.c (forward_propagate_addr_expr_1): Avoid
	taking the address of a V_C_E of a constant.

2010-05-21  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/43949
	* tree-vrp.c (ssa_name_nonnegative_p): Return true for unsigend types.
	(extract_range_from_binary_expr): Handle TRUNC_MOD_EXPR.

2010-05-21  Jakub Jelinek  <jakub@redhat.com>

	PR debug/44205
	* tree-cfgcleanup.c (tree_forwarder_block_p): Return false if
	at -O0 goto_locus of any of the incoming edges differs from